# GLRenderer

./: .gitignore  4.2.texture.fs  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.cpp  my_program
.cmake/api/v1/reply/: cmakeFiles-v1-9493ee95d5cc42b8115d.json  codemodel-v2-8100b52b88dadc09ccc5.json  index-2025-07-02T13-09-48-0823.json
OpenGLRender/: README.md  main.cpp
OpenGLRender/include/: Camera.hpp  Mesh.hpp  Model.hpp  Vertex.hpp  Window.hpp
OpenGLRender/include/glad/: glad.c
OpenGLRender/shader/: model.fs
OpenGLRender/src/: Mesh.cpp  Shader.cpp  Texture.cpp  Window.cpp
include/: Shader.hpp  Texture.hpp  application.hpp  camera.hpp  light.hpp  mesh.hpp  model.hpp  shader.hpp
include/glad/: glad.h
src/: Camera.cpp  Model.cpp
